{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 23,
  "lineage": "38770660-82fd-0376-f256-ccc3c06120e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "easylife-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:617634918462:internet-gateway/igw-01a9cf5fab0cee68f",
            "id": "igw-01a9cf5fab0cee68f",
            "owner_id": "617634918462",
            "tags": {
              "name": "Life"
            },
            "tags_all": {
              "name": "Life"
            },
            "vpc_id": "vpc-04051bdeb27d3e010"
          },
          "dependencies": [
            "aws_vpc.EasyLife-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Priv-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:617634918462:security-group/sg-024e798fd88e5bbb0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024e798fd88e5bbb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240823202408581000000003",
            "name_prefix": "terraform-",
            "owner_id": "617634918462",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Priv-SG"
            },
            "tags_all": {
              "name": "Priv-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04051bdeb27d3e010"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EasyLife-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Pub-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:617634918462:security-group/sg-0fd0bfb515918cb94",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd0bfb515918cb94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240823202408594400000004",
            "name_prefix": "terraform-",
            "owner_id": "617634918462",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Priv-SG"
            },
            "tags_all": {
              "name": "Priv-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04051bdeb27d3e010"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EasyLife-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "EasyLife-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:617634918462:vpc/vpc-04051bdeb27d3e010",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d83a2acb8c0fa2a0",
            "default_route_table_id": "rtb-063c427a22b45a146",
            "default_security_group_id": "sg-06e410c354c5b7fa4",
            "dhcp_options_id": "dopt-0480326effd635394",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04051bdeb27d3e010",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063c427a22b45a146",
            "owner_id": "617634918462",
            "tags": {
              "name": "EasyLife"
            },
            "tags_all": {
              "name": "EasyLife"
            }
          }
        }
      ]
    }
  ]
}